Require Metabase session/encryption secrets before public exposure
Fresh docker compose up started with unsigned session cookies and
unencrypted stored DB credentials -- fine for the initial connectivity
test, not fine once port 443 is open to 0.0.0.0/0. docker-compose.yml now
requires MB_SESSION_SECRET_KEY/MB_ENCRYPTION_SECRET_KEY from a gitignored
.env; SETUP.md documents generating them and running the one-time
enable-encryption migration Metabase needs for the latter.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>